# Il2CppDumper

./: .gitignore
Il2CppDumper/: Program.cs
Il2CppDumper-CPP/include/Il2CppDumper/: RvaIndexLookup.h
Il2CppDumper-CPP/src/: RvaIndexLookup.cpp
Il2CppDumper/IO/: BinaryStream.cs
Il2CppDumper/Il2Cpp/: Metadata.cs  MetadataClass.cs
Il2CppDumper/Outputs/: DumpCsCacheBuilder.cs  Il2CppDecompiler.cs  RvaIndexBuilder.cs  StructGenerator.cs
Il2CppDumper/Utils/: DummyAssemblyGenerator.cs  Il2CppExecutor.cs  SectionHelper.cs
Switch/: CMakeLists.txt  Makefile  README.md
Switch/include/SwitchPort/: BinaryReader.h  ElfImage.h  MetadataFile.h  MetadataFormat.h  Nx2ElfLite.h  RegistrationFinder.h  RuntimeTypeSystem.h
Switch/src/: ElfImage.cpp  MetadataFile.cpp  Nx2ElfLite.cpp  RegistrationFinder.cpp  RuntimeTypeSystem.cpp  main.cpp
